maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:56: error: not found: value cpt
                    cpt += 1;
                    ^